2005-05-31  James Turner  <james@worldforge.org>

	* Eris/Avatar.cpp, Eris/Avatar.h: use a different (and hopefully correct)
	  method to interpolate server time values for the client. getWorldTime
	  should now work as advertised.

2005-05-27  James Turner  <james@worldforge.org>

	* Eris/View.h, Eris/View.cpp: add support for emitting a notification
	  signal when an Entity is seen.

2005-05-25  James Turner  <james@worldforge.org>

	* Eris/Entity.h: add an accesor for the Entity's owning View

2005-05-20  James Turner  <james@worldforge.org>

	* Eris/TypeService.h, Eris/TypeService.cpp: remove the badTypes system
	  for recording invalid types, because it relied upon the false
	  assumption that the set of server types was constant over a Connection
	  lifetime (more fool me!)
	  
	* Eris/TypeService.cpp: re-ordered decoding of ERROR vs INFO responses to
	  type lookups, so ERROR case actually gets run. Thanks to Hagen for the
	  catch.

2005-05-18  James Turner  <james@worldforge.org>

	* Eris/Entity.cpp, Eris/Entity.h: re-factor how Entity processes attribute
	  data, to make integration-by-subclassing easier. Make nativeAttrChanged
	  private, and add a virtual 'onAttrChanged' hook, which is a no-op by
	  default. This avoids forcing clients to monitor and decode the
	  'Changed' signal (which is complex) if they track many attributes.
	  Also make setAttr private, to avoid abuse by clients.

2005-05-16  James Turner  <james@worldforge.org>

	* Eris/ServerInfo.cpp: don't mandate the existence of build-date or
	  version fields for the moment.
	  
	* test/metaquery.cpp: include version and build date in plain-text mode

2005-05-15  James Turner  <james@worldforge.org>

	* Eris/ServerInfo.cpp, Eris/ServerInfo.h: augment ServerInfo to expose the
	  the version and build-date information if the server provides it.
	  
	* test/metaquery.cpp: in HTML mode, output the server program name,
	  version and build date.

2005-05-08  Al Riddoch  <alriddoch@zepler.org>
